unpackaged/main/default/objects/Product2/fields/AddOn_RollUp_Category__c.field-meta.xml
<CustomField>
    <fullName>AddOn_RollUp_Category__c</fullName>
    <description>tell line rollUp flow which fee category to add the price to</description>
    <inlineHelpText>determines which fee category to rollUp to opportunity
-if blank will assume Subscription</inlineHelpText>
    <label>AddOn RollUp Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>One Time Fee</fullName>
            </value>
            <value>
                <fullName>Ad Spend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>