unpackaged/main/default/objects/Product2/fields/Ala_Carte__c.field-meta.xml
<CustomField>
    <fullName>Ala_Carte__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>can this product be selected ala carte and added to a tier plan over and above included addOns</inlineHelpText>
    <label>Ala Carte?</label>
    <type>Checkbox</type>
</CustomField>