unpackaged/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand</label>
    <type>Checkbox</type>
</CustomField>