unpackaged/main/default/objects/Product2/fields/Brand_plus__c.field-meta.xml
<CustomField>
    <fullName>Brand_plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand+</label>
    <type>Checkbox</type>
</CustomField>