unpackaged/main/default/objects/Product2/fields/Bundle_Discount__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Discount__c</fullName>
    <label>Bundle Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>