unpackaged/main/default/objects/Product2/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>