unpackaged/main/default/objects/Product2/fields/Growth_plus__c.field-meta.xml
<CustomField>
    <fullName>Growth_plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Growth+</label>
    <type>Checkbox</type>
</CustomField>