unpackaged/main/default/objects/Product2/fields/Launch_plus__c.field-meta.xml
<CustomField>
    <fullName>Launch_plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch+</label>
    <type>Checkbox</type>
</CustomField>