unpackaged/main/default/objects/Product2/fields/Leads_Pro__c.field-meta.xml
<CustomField>
    <fullName>Leads_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leads Pro</label>
    <type>Checkbox</type>
</CustomField>