unpackaged/main/default/objects/Product2/fields/Monthly_Service__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Service</label>
    <type>Checkbox</type>
</CustomField>