unpackaged/main/default/objects/Product2/fields/One_Time_Fee__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>is this a one time fee product? Product Family should also be set to match.</inlineHelpText>
    <label>One Time Fee?</label>
    <type>Checkbox</type>
</CustomField>