unpackaged/main/default/objects/Product2/fields/Plan_Includes_Ad_Spend__c.field-meta.xml
<CustomField>
    <fullName>Plan_Includes_Ad_Spend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Includes Ad Spend?</label>
    <type>Checkbox</type>
</CustomField>