unpackaged/main/default/objects/Product2/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium</label>
    <type>Checkbox</type>
</CustomField>