unpackaged/main/default/objects/Product2/fields/Premium_plus__c.field-meta.xml
<CustomField>
    <fullName>Premium_plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium+</label>
    <type>Checkbox</type>
</CustomField>