unpackaged/main/default/objects/Product2/fields/Primary_Plan_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Plan_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to indicate which product is the representative product for the now current tier plan</inlineHelpText>
    <label>Primary Plan Product</label>
    <type>Checkbox</type>
</CustomField>