unpackaged/main/default/objects/Product2/fields/Pro__c.field-meta.xml
<CustomField>
    <fullName>Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pro</label>
    <type>Checkbox</type>
</CustomField>