unpackaged/main/default/objects/Product2/fields/Product_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product 18 Digit ID</label>
    <type>Text</type>
</CustomField>