unpackaged/main/default/objects/Product2/fields/Product_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Sort_Order__c</fullName>
    <inlineHelpText>1=Setup Fee
2=Plan
3=Included AddOns
4=Ala Carte AddOns</inlineHelpText>
    <label>Product Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>