unpackaged/main/default/objects/Product2/fields/Recurring_Service__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Service</label>
    <type>Checkbox</type>
</CustomField>