unpackaged/main/default/objects/Product2/fields/SEO_Pro__c.field-meta.xml
<CustomField>
    <fullName>SEO_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO Pro</label>
    <type>Checkbox</type>
</CustomField>