unpackaged/main/default/objects/Product2/fields/Tier_Plan_Product__c.field-meta.xml
<CustomField>
    <fullName>Tier_Plan_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>is this a tier plan product? Product Family should also be set to match.</inlineHelpText>
    <label>Tier Plan Product?</label>
    <type>Checkbox</type>
</CustomField>