unpackaged/main/default/objects/Product2/fields/Tier_Plans_Available__c.field-meta.xml
<CustomField>
    <fullName>Tier_Plans_Available__c</fullName>
    <description>NOTE: if pick list values are added, then update Tier Plans Available formula field on PriceBook Entry record --- if the new value needs to be on pick list in Manage Products</description>
    <inlineHelpText>if Ala Carte? then enter tier plans that this product can be added to</inlineHelpText>
    <label>Tier Plans Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tier_Plan</valueSetName>
    </valueSet>
</CustomField>