unpackaged/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Subdomains</fullName>
            </value>
            <value>
                <fullName>AI Lead Nurture</fullName>
            </value>
            <value>
                <fullName>Automated Blogs</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
            <value>
                <fullName>Brand SEO</fullName>
            </value>
            <value>
                <fullName>Content Review</fullName>
            </value>
            <value>
                <fullName>Design Change</fullName>
            </value>
            <value>
                <fullName>Design Refresh</fullName>
            </value>
            <value>
                <fullName>Editorial SEO</fullName>
            </value>
            <value>
                <fullName>GMB Posts</fullName>
                <label>GBP Posts</label>
            </value>
            <value>
                <fullName>GBP SetUp</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>MLS Implementation</fullName>
            </value>
            <value>
                <fullName>On-Demand Ads</fullName>
            </value>
            <value>
                <fullName>Paid Media</fullName>
            </value>
            <value>
                <fullName>Platform Migration</fullName>
            </value>
            <value>
                <fullName>Presence Copilot</fullName>
            </value>
            <value>
                <fullName>Property Website</fullName>
            </value>
            <value>
                <fullName>SEO Key Word Analysis</fullName>
            </value>
            <value>
                <fullName>SEO Migration</fullName>
            </value>
            <value>
                <fullName>SEO Optimizations</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Website Launches</fullName>
            </value>
            <value>
                <fullName>White Label App</fullName>
            </value>
            <value>
                <fullName>Brand Identity</fullName>
                <isActive>false</isActive>
                <label>Brand Identity</label>
            </value>
            <value>
                <fullName>Citations + Reputation Management</fullName>
                <isActive>false</isActive>
                <label>Citations + Reputation Management</label>
            </value>
            <value>
                <fullName>Custom Website</fullName>
                <isActive>false</isActive>
                <label>Custom Website</label>
            </value>
            <value>
                <fullName>Digital CMA</fullName>
                <isActive>false</isActive>
                <label>Digital CMA</label>
            </value>
            <value>
                <fullName>Lead Intelligence</fullName>
                <isActive>false</isActive>
                <label>Lead Intelligence</label>
            </value>
            <value>
                <fullName>Link Building</fullName>
                <isActive>false</isActive>
                <label>Link Building</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>