unpackaged/main/default/objects/Product2/recordTypes/Bundle.recordType-meta.xml
<RecordType>
    <fullName>Bundle</fullName>
    <active>true</active>
    <description>Bundles consist of links to other products</description>
    <label>Bundle</label>
</RecordType>