unpackaged/main/default/objects/Product2/recordTypes/One_Time_Fees.recordType-meta.xml
<RecordType>
    <fullName>One_Time_Fees</fullName>
    <active>true</active>
    <label>One-Time Fees</label>
</RecordType>