unpackaged/main/default/objects/Product2/recordTypes/Recurring_Revenue.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Revenue</fullName>
    <active>true</active>
    <label>Recurring Revenue</label>
</RecordType>