unpackaged/main/default/objects/Product2/listViews/Ala_Carte_Products.listView-meta.xml
<ListView>
    <fullName>Ala_Carte_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>AddOn_RollUp_Category__c</columns>
    <columns>Tier_Plans_Available__c</columns>
    <columns>Product_Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Ala_Carte__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ala Carte Products</label>
</ListView>