unpackaged/main/default/objects/Product2/listViews/Included_AddOn_Products_Selected.listView-meta.xml
<ListView>
    <fullName>Included_AddOn_Products_Selected</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 or 5 or 6 or 7 or 8 or 9 or 10)</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Pro__c</columns>
    <columns>Custom__c</columns>
    <columns>Launch_plus__c</columns>
    <columns>Brand_plus__c</columns>
    <columns>Growth_plus__c</columns>
    <columns>Enterprise__c</columns>
    <columns>Premium_plus__c</columns>
    <columns>Leads_Pro__c</columns>
    <columns>SEO_Pro__c</columns>
    <columns>Product_Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>notEqual</operation>
        <value>Plan,Setup Fee</value>
    </filters>
    <filters>
        <field>Ala_Carte__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Brand_plus__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Growth_plus__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Launch_plus__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Premium_plus__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Enterprise__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Leads_Pro__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SEO_Pro__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Included AddOn Products - Selected</label>
</ListView>