unpackaged/main/default/objects/Product2/listViews/One_Time_Fee_Products.listView-meta.xml
<ListView>
    <fullName>One_Time_Fee_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Primary_Plan_Product__c</columns>
    <columns>One_Time_Fee__c</columns>
    <columns>Product_Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Setup Fee</value>
    </filters>
    <label>One-Time Fee Products</label>
</ListView>